@@ -1,3 +1,9 @@
+2019-03-25  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/71861
+	Backport from trunk
+	* gfortran.dg/interface_abstract_5.f90: New test case.
+
 2019-03-21  Thomas Schwinge  <thomas@codesourcery.com>
 
 	PR fortran/56408
